--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ p {
     <h2 id="end"></h2>
     <script>
     // The data/time we want to countdown to
-    var countDownDate = new Date("Apr 1, 2023 16:37:52").getTime();
+    var countDownDate = new Date("Apr 10, 2023 23:44:00").getTime();
+    //var countDownDate = new Date(Date.UTC(2023, 04, 11, 6, 44)).getTime();
 
     // Run myfunc every second
     var myfunc = setInterval(function() {
